# Bin-Picking_PointCloud

./: 90_db_part_10_hist.csv  90_db_part_1_hist.csv  90_db_part_2_hist.csv  90_db_part_4_hist.csv  90_db_part_9_hist.csv  90_single_1_pre_hist.csv  90_single_5_pre_db_des_hist.csv  DepthCamera_2021-04-07-12-36-11.json  DepthCamera_2021-04-07-12-37-46.json  Flowchart.drawio  Offine_flowchart.drawio  Online_flowchart.drawio  README.md  ScreenCamera_2021-03-30-22-04-36.json  ScreenCamera_2021-03-30-22-33-14.json  ScreenCamera_2021-03-30-22-33-17.json  ScreenCamera_2021-03-30-22-39-06.json  ScreenCamera_2021-04-05-14-36-58.json  draw.py  offline_script.py  online_script.py  online_script_multi.py  ~$oject_v2.docx  ~$รศึกษาการวิเคราะห์ข้อมูลPoint cloudเพื่อระบุตำแหน่งชิ้นงานแก่แขนกลในการหยิบจับ.docx  ~WRL2395.tmp  การศึกษาการวิเคราะห์ข้อมูลPoint cloudเพื่อระบุตำแหน่งชิ้นงานแก่แขนกลในการหยิบจับ.docx
.pylint.d/: online_script_multi1.stats
code/: demo_globalregistration.py  global_script.py  object_keypoint_descriptor.py  offline_script.py  offline_script_multiviews.py  online_script.py  online_script_multiviews.py  partial_cad_rescaling.py  ply_voxdown_rmoutier_rmplane.py  realsense_streaming.py  streaming_pointcloud.py  visualize_pointcloud.py
code/.pylint.d/: ply_vox_outlier1.stats
code/utils/: fpfh_to_csv.py  generate_dodecahedron_sphere_vertices_coordinates.py  generate_icosahedron_sphere_vertices_coordinates.py  pcd_to_jpg.py  pcd_to_np.py  report_plot_dodeca_with_cadmodel.py  test_optics_clustering.py  (+1 more)
virtual_scanner/: CMakeLists.txt  virtual_scanner.cpp
(+188 files in other folders)
