cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(virtual_scanner)
find_package(PCL 1.8 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_virtual_scanner virtual_scanner.cpp)
target_link_libraries(pcl_virtual_scanner ${PCL_LIBRARIES})